# golang/docs/swagger.json
@@ -692,7 +692,7 @@
                     {
                         "type": "integer",
                         "description": "Attr ID",
-                        "name": "attrID",
+                        "name": "attr_id",
                         "in": "path",
                         "required": true
                     },
@@ -702,6 +702,25 @@
                         "name": "image",
                         "in": "formData",
                         "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "用户提交内容",
+                        "name": "use_message",
+                        "in": "formData",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "description": "生成图片宽度",
+                        "name": "width",
+                        "in": "formData"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "生成图片高度",
+                        "name": "height",
+                        "in": "formData"
                     }
                 ],
                 "responses": {
@@ -753,6 +772,25 @@
                         "name": "image",
                         "in": "formData",
                         "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "用户提交内容",
+                        "name": "use_message",
+                        "in": "formData",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "description": "生成图片宽度",
+                        "name": "width",
+                        "in": "formData"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "生成图片高度",
+                        "name": "height",
+                        "in": "formData"
                     }
                 ],
                 "responses": {
@@ -975,16 +1013,30 @@
                 }
             }
         },
-        "api.TextToImgMessage": {
+        "api.SDParam": {
             "type": "object",
             "properties": {
+                "height": {
+                    "type": "integer"
+                },
                 "negative_prompt": {
                     "type": "string"
                 },
                 "prompt": {
                     "type": "string"
                 },
-                "userMessage": {
+                "witdh": {
+                    "type": "integer"
+                }
+            }
+        },
+        "api.TextToImgMessage": {
+            "type": "object",
+            "properties": {
+                "sd_param": {
+                    "$ref": "#/definitions/api.SDParam"
+                },
+                "user_message": {
                     "description": "用户输入",
                     "type": "string"
                 }
